--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "15.3.1",
     "react-bootstrap": "0.30.3",
     "react-dom": "15.3.1",
+    "react-notification-system": "0.2.10",
     "react-redux": "4.4.5",
     "react-router": "2.7.0",
     "react-router-redux": "4.0.5",
@@ -47,6 +48,7 @@
     "babel-core": "6.14.0",
     "babel-loader": "6.2.5",
     "babel-plugin-react-display-name": "2.0.0",
+    "babel-plugin-transform-async-to-generator": "6.8.0",
     "babel-plugin-transform-react-constant-elements": "6.9.1",
     "babel-plugin-transform-react-remove-prop-types": "0.2.9",
     "babel-preset-latest": "6.14.0",
@@ -79,7 +81,12 @@
     "postcss-loader": "0.11.0",
     "prompt": "1.0.0",
     "react-addons-test-utils": "15.3.1",
+    "redux-devtools": "3.3.1",
+    "redux-devtools-dock-monitor": "1.1.1",
+    "redux-devtools-log-monitor": "1.0.11",
     "redux-immutable-state-invariant": "1.2.3",
+    "redux-logger": "2.6.1",
+    "redux-thunk": "2.1.0",
     "replace": "0.3.0",
     "rimraf": "2.5.4",
     "sass-loader": "4.0.0",
