--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router": "2.7.0",
     "react-router-redux": "4.0.5",
     "redux": "3.5.2",
+    "redux-api-middleware": "1.0.2",
     "redux-form": "6.0.5",
     "redux-thunk": "2.1.0"
   },
