--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "license": "MIT",
   "dependencies": {
     "isomorphic-fetch": "2.2.1",
+    "jwt-decode": "2.1.0",
     "object-assign": "4.1.0",
     "react": "15.3.1",
     "react-bootstrap": "0.30.3",
