--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "autoprefixer": "6.4.0",
     "babel-cli": "6.14.0",
     "babel-core": "6.14.0",
+    "babel-jest": "16.0.0",
     "babel-loader": "6.2.5",
     "babel-plugin-react-display-name": "2.0.0",
     "babel-plugin-transform-async-to-generator": "6.8.0",
     "babel-plugin-transform-react-constant-elements": "6.9.1",
     "babel-plugin-transform-react-remove-prop-types": "0.2.9",
+    "babel-preset-es2015": "6.16.0",
     "babel-preset-latest": "6.14.0",
     "babel-preset-react": "6.11.1",
     "babel-preset-react-hmre": "1.1.1",
@@ -75,6 +77,7 @@
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.22.0",
     "isparta": "4.0.0",
+    "jest": "16.0.0",
     "mocha": "3.0.2",
     "mockdate": "1.0.4",
     "node-sass": "3.8.0",
@@ -83,6 +86,7 @@
     "postcss-loader": "0.11.0",
     "prompt": "1.0.0",
     "react-addons-test-utils": "15.3.1",
+    "react-test-renderer": "15.3.2",
     "redux-devtools": "3.3.1",
     "redux-devtools-dock-monitor": "1.1.1",
     "redux-devtools-log-monitor": "1.0.11",
