--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "autoprefixer": "6.4.0",
     "babel-cli": "6.14.0",
     "babel-core": "6.14.0",
+    "babel-es6-polyfill": "1.1.0",
     "babel-jest": "16.0.0",
     "babel-loader": "6.2.5",
     "babel-plugin-react-display-name": "2.0.0",
