--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "redux": "3.5.2",
     "redux-api-middleware": "1.0.2",
     "redux-form": "6.0.5",
+    "redux-saga": "0.12.0",
     "redux-thunk": "2.1.0"
   },
   "devDependencies": {
