--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
     "react-dom": "15.3.1",
     "react-notification-system": "0.2.10",
     "react-redux": "4.4.5",
-    "react-router": "2.7.0",
-    "react-router-redux": "4.0.5",
+    "react-router": "2.8.1",
+    "react-router-redux": "4.0.6",
     "redux": "3.5.2",
     "redux-api-middleware": "1.0.2",
+    "redux-auth-wrapper": "0.8.0",
     "redux-form": "6.0.5",
     "redux-saga": "0.12.0",
     "redux-thunk": "2.1.0"
