--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "isomorphic-fetch": "2.2.1",
     "jwt-decode": "2.1.0",
     "object-assign": "4.1.0",
     "react": "15.3.1",
@@ -44,7 +43,8 @@
     "redux-auth-wrapper": "0.8.0",
     "redux-form": "6.0.5",
     "redux-saga": "0.12.0",
-    "redux-thunk": "2.1.0"
+    "redux-thunk": "2.1.0",
+    "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "6.4.0",
@@ -116,9 +116,8 @@
   },
   "jest": {
     "verbose": true,
-    "automock": false,
     "setupFiles": [
-      ".//setupJest.js"
+      "./setupJest.js"
     ]
   }
 }
