--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "testu": "npm run test -- -u",
     "test:cover": "babel-node node_modules/isparta/bin/isparta cover --root src --report html node_modules/mocha/bin/_mocha -- --require ./tools/testSetup.js \"src/**/*.spec.js\" --reporter progress",
     "test:cover:travis": "babel-node node_modules/isparta/bin/isparta cover --root src --report lcovonly _mocha -- --require ./tools/testSetup.js \"src/**/*.spec.js\" && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
-    "test:watch": "npm run test -- --watchAll",
+    "test:watch": "npm run test -- --watchAll --coverage",
     "open:cover": "npm run test:cover && open coverage/index.html"
   },
   "author": "",
@@ -118,6 +118,9 @@
     "verbose": true,
     "setupFiles": [
       "./setupJest.js"
+    ],
+    "modulePathIgnorePatterns": [
+      "./__tests__/helpers.js"
     ]
   }
 }
