--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-router-redux": "4.0.6",
     "redux": "3.5.2",
     "redux-auth-wrapper": "0.8.0",
-    "redux-form": "6.0.5",
+    "redux-form": "6.1.0",
     "redux-saga": "0.12.0",
     "redux-thunk": "2.1.0",
     "whatwg-fetch": "1.0.0"
@@ -77,6 +77,7 @@
     "eslint-plugin-react": "6.2.0",
     "eslint-watch": "2.1.14",
     "extract-text-webpack-plugin": "1.0.1",
+    "fetch-mock": "^5.5.0",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.22.0",
     "isparta": "4.0.0",
