--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "babel-cli": "6.14.0",
     "babel-core": "6.14.0",
     "babel-es6-polyfill": "1.1.0",
+    "babel-eslint": "6.1.2",
     "babel-jest": "16.0.0",
     "babel-loader": "6.2.5",
     "babel-plugin-react-display-name": "2.0.0",
@@ -72,7 +73,8 @@
     "cross-env": "2.0.1",
     "css-loader": "0.24.0",
     "enzyme": "2.4.1",
-    "eslint": "3.4.0",
+    "eslint": "3.7.1",
+    "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "1.14.0",
     "eslint-plugin-jsx-a11y": "2.2.0",
     "eslint-plugin-react": "6.2.0",
