--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "license": "MIT",
   "dependencies": {
     "classnames": "^2.2.5",
+    "font-awesome": "^4.6.3",
     "jwt-decode": "2.1.0",
     "lodash": "^4.16.4",
     "object-assign": "4.1.0",
