--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test:cover": "babel-node node_modules/isparta/bin/isparta cover --root src --report html node_modules/mocha/bin/_mocha -- --require ./tools/testSetup.js \"src/**/*.spec.js\" --reporter progress",
     "test:cover:travis": "babel-node node_modules/isparta/bin/isparta cover --root src --report lcovonly _mocha -- --require ./tools/testSetup.js \"src/**/*.spec.js\" && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
     "test:watch": "npm run test -- --watchAll",
-    "open:cover": "npm run test:cover && open coverage/index.html"
+    "open:cover": "npm run test:cover && open coverage/index.html",
+    "flow": "flow; test $? -eq 0 -o $? -eq 2"
   },
   "author": "",
   "license": "MIT",
@@ -59,6 +60,7 @@
     "babel-loader": "6.2.5",
     "babel-plugin-react-display-name": "2.0.0",
     "babel-plugin-transform-async-to-generator": "6.8.0",
+    "babel-plugin-transform-flow-strip-types": "6.14.0",
     "babel-plugin-transform-react-constant-elements": "6.9.1",
     "babel-plugin-transform-react-remove-prop-types": "0.2.9",
     "babel-preset-es2015": "6.16.0",
@@ -84,6 +86,7 @@
     "extract-text-webpack-plugin": "1.0.1",
     "fetch-mock": "^5.5.0",
     "file-loader": "0.9.0",
+    "flow-bin": "0.33.0",
     "html-webpack-plugin": "2.22.0",
     "isparta": "4.0.0",
     "jest": "16.0.0",
