auth reducer test passing

--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,9 @@
     "react",
     "stage-1"
   ],
+  "plugins": [
+    "transform-flow-strip-types"
+  ],
   "env": {
     "development": {
       "presets": [
