--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "postcss-loader": "0.11.0",
     "prompt": "1.0.0",
     "react-addons-test-utils": "15.3.1",
+    "react-dom": "15.3.1",
     "react-test-renderer": "15.3.2",
     "redux-devtools": "3.3.1",
     "redux-devtools-dock-monitor": "1.1.1",
